# RoboCon2024

./: README.md
マイコン/: IM920s_send.ino
ロボット１/: README.md
ロボット１/ソフトウェア/2024_r1/: README.md
ロボット１/ソフトウェア/2024_r1/control/dualsense_ros2/: package.xml
ロボット１/ソフトウェア/2024_r1/control/dualsense_ros2/include/dualsense_ros2/: dualsense_ros2_node.hpp
ロボット１/ソフトウェア/2024_r1/control/dualsense_ros2/src/: dualsense_ros2_node.cpp
ロボット１/ソフトウェア/2024_r1/control/ombridge_driver/: CMakeLists.txt  package.xml
ロボット１/ソフトウェア/2024_r1/control/ombridge_driver/include/ombridge_driver/: ombridge.hpp  serial.hpp
ロボット１/ソフトウェア/2024_r1/control/ombridge_driver/src/: ombridge.cpp  serial.cpp
ロボット１/ソフトウェア/2024_r1/control/serial_controller/src/: serial_controller.cpp  serial_handler.cpp
ロボット１/ソフトウェア/2024_r1/control/tobasudake/: CMakeLists.txt  package.xml
ロボット１/ソフトウェア/2024_r1/control/tobasudake/include/tobasudake/: tobasudake.hpp
ロボット１/ソフトウェア/2024_r1/control/tobasudake/src/: tobasudake.cpp
ロボット１/ソフトウェア/2024_r1/localization/imu_ekf_posture/: CMakeLists.txt  package.xml
ロボット１/ソフトウェア/2024_r1/localization/imu_ekf_posture/include/: ekf6_utils.hpp  imu_ekf_posture.hpp  matrix_utils.hpp
ロボット１/ソフトウェア/2024_r1/localization/imu_ekf_posture/src/: ekf6_utils.cpp  imu_ekf_posture.cpp  matrix_utils.cpp
ロボット１/ソフトウェア/2024_r1/localization/visual_odom_ros2/: CMakeLists.txt  package.xml
ロボット１/ソフトウェア/2024_r1/localization/visual_odom_ros2/include/visual_odom_ros2/: vo.hpp  vo_ros2.hpp
ロボット１/ソフトウェア/2024_r1/localization/visual_odom_ros2/src/: vo.cpp  vo_ros2.cpp
ロボット１/ソフトウェア/2024_r1/perception/pcl_wall_detector/: CMakeLists.txt  package.xml
ロボット１/ソフトウェア/2024_r1/perception/pcl_wall_detector/include/pcl_wall_detector/: pwd.hpp
ロボット１/ソフトウェア/2024_r1/perception/pcl_wall_detector/src/: pwd.cpp
ロボット１/ソフトウェア/2024_r1/perception/wall_detector/: CMakeLists.txt  package.xml
ロボット１/ソフトウェア/2024_r1/perception/wall_detector/include/wall_detector/: wall_detector.hpp
ロボット１/ソフトウェア/2024_r1/perception/wall_detector/src/: wall_detector.cpp
ロボット１/ソフトウェア/2024_r1/planning/field_sim/: CMakeLists.txt  package.xml
ロボット１/ソフトウェア/2024_r1/planning/field_sim/src/: field_sim.cpp
ロボット１/ソフトウェア/2024_r1/planning/path_planner_ros2/: CMakeLists.txt  package.xml
ロボット１/ソフトウェア/2024_r1/planning/path_planner_ros2/include/path_planner_ros2/: path_planner.hpp
ロボット１/ソフトウェア/2024_r1/planning/path_planner_ros2/src/: path_planner.cpp
ロボット１/ソフトウェア/2024_r1/planning/posture_planner/: CMakeLists.txt  package.xml
ロボット１/ソフトウェア/2024_r1/planning/posture_planner/include/posture_planner/: posture_planner.hpp
ロボット１/ソフトウェア/2024_r1/planning/posture_planner/src/: posture_planner.cpp
ロボット１/ソフトウェア/2024_r1/planning/waypoint_planner/: CMakeLists.txt  package.xml
ロボット１/ソフトウェア/2024_r1/planning/waypoint_planner/include/waypoint_planner/: waypoint_planner.hpp
ロボット１/ソフトウェア/2024_r1/planning/waypoint_planner/src/: waypoint_planner.cpp
ロボット１/ソフトウェア/2024_r1/r1_launch/: CMakeLists.txt  package.xml
ロボット１/ソフトウェア/2024_r1/r1_launch/launch/: auto.launch.xml  manual.launch.xml  planning.launch.xml  player.launch.xml
ロボット１/ソフトウェア/2024_r1/r1_launch/launch/control/: dualsense_ros2.launch.xml  kado.launch.xml  micro_ros_agent_launch.py  ombridge.launch.xml  serial_controller.launch.xml  tobasudake.launch.xml
ロボット１/ソフトウェア/2024_r1/r1_launch/launch/localization/: imu_ekf_posture.launch.xml  visual_odom_ros2.launch.xml
ロボット１/ソフトウェア/2024_r1/r1_launch/launch/perception/: wall_detector.launch.xml
ロボット１/ソフトウェア/2024_r1/r1_launch/launch/planning/: field_sim.launch.xml  path_planner_ros2.launch.xml  posture_planner.launch.xml  waypoint_planner.launch.xml
ロボット１/ソフトウェア/2024_r1/r1_launch/launch/sensing/: realsense_launch.py
ロボット１/ソフトウェア/2024_r1/scripts/: import_third_party.sh  install_realsense_sdk.sh  install_ros_depend.sh
ロボット２/: README.md
ロボット２/カケルダケ/: README.md
ロボット２/カケルダケ/マイコン/: Packet.cpp  hakorobo2024.h  kakerudake.ino  mcp2515.cpp
ロボット２/ナゲルダケ/: README.md
ロボット２/ナゲルダケ/ソフトウェア/Rust/pub_uni/: run.sh
ロボット２/ナゲルダケ/ソフトウェア/Unity/Build済み/Unity_to_Rust-KK_New_Data/: boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
ロボット２/ナゲルダケ/マイコン/: I2C.cpp  I2C.h  LoopCycler.cpp  Packet.h  Utils.h  Wheel.h
ロボット２/ナゲルダケ/マイコン/nagerudake/: LoopCycler.h  PID.cpp  README.md  mcp2515.h  nagerudake.ino
ロボット２/ハコブダケ/: README.md
ロボット２/ハコブダケ/ソフトウェア/Rust/pub_uni/: run.sh
ロボット２/ハコブダケ/ソフトウェア/Unity/build済み/Unity_to_Rust-Tsuna_Data/: app.info  boot.config  level0  resources.assets
ロボット２/ハコブダケ/マイコン/: I2C.cpp  IM920s.cpp  IM920s.h  PID.h  Packet.cpp  Packet.h  RMC.cpp  RMC.h  RMPID.h  RoboMaster.cpp  RoboMaster.h  Wheel.cpp  hakobudake.ino  hakorobo2024.h
ロボット２/ヒロウダケ/: README.md
ロボット２/ヒロウダケ/マイコン/: esp32_hiroudake.ino
送信側/: IM920sender.ino
(+5 files in other folders)
